# linchpin

./: .gitignore  Dockerfile  README.md  TODO  bot.py  main.py  play.ipynb  pyproject.toml
src/: bb.py  bot.py  config.py  scrape.py
src/tracking/: __init__.py  blogs.py  news.py  sbir.py
